syntax = "proto3";

package proto;

option go_package = "internal/proto";

// RiskSeverity represents security risk levels
enum RiskSeverity {
  RISK_SEVERITY_UNKNOWN = 0;
  RISK_SEVERITY_LOW = 1;
  RISK_SEVERITY_MEDIUM = 2;
  RISK_SEVERITY_HIGH = 3;
  RISK_SEVERITY_CRITICAL = 4;
}

// FindingType represents the type of security finding
enum FindingType {
  FINDING_TYPE_UNKNOWN = 0;
  FINDING_TYPE_CONNECTION = 1;  // Connection analysis
  FINDING_TYPE_TOOL_ANALYSIS = 2;      // Tools analysis
  FINDING_TYPE_SECRETS = 3;  // Secret detection
  FINDING_TYPE_SCA = 4;      // Software Composition Analysis
  FINDING_TYPE_SAST = 5;     // Static Application Security Testing
}

// Finding represents a security finding from a scan
message Finding {
  string tool = 1;
  FindingType type = 2;
  RiskSeverity severity = 3;
  string rule_id = 4;
  string title = 5;
  string mcp_server_name = 6; // Optional
  string mcp_tool_name = 7; // Optional
  string file = 8;      // Optional
  int32 line = 9;       // Optional
  string message = 10;   // Optional

  // SCA-specific (optional but useful)
  string package = 11;   // Optional
  string version = 12;  // Optional
  string fixed = 13;    // Optional
}
